updated lead text #765

--- a/pages/components.html
+++ b/pages/components.html
@@ -7,14 +7,13 @@ permalink: "components.html"
 
 
 <h1 class="mt-lg-0">Components</h1>
-<p>Components are the reusable building blocks of the California State Template. </p>
-<p>Each component is designed to enhance user experiences, and has been created to work together to create web page
- patterns.</p>
-<p>Our components were:</p>
-<ul>
- <li>Created with performance and accessibility in mind</li>
- <li>Designed to be more adaptable </li>
- <li>Built with user needs in mind</li>
+<p class="lead">Components are the reusable building blocks of the State Template. </p>
+<p class="lead">When we designed our components, we made sure:</p>
+
+<ul class="lead">
+ <li>To consider performance and accessibility</li>
+ <li>They were modular and compatible </li>
+ <li>To enhance the user experience and needs</li>
 </ul>
 
 <h2>All components</h2>
