--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -7,7 +7,7 @@ permalink: "patterns/banner.html"
 
 
 <h1 class="mt-lg-0">Banner</h1>
-<p class="lead">The banner is the first thing a visitor sees on the homepage of a website. It often spans the full width
+<p>The banner is the first thing a visitor sees on the homepage of a website. It often spans the full width
  of the screen or the main content area.</p>
 <p>It usually includes:</p>
 <ul>
