--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -10,8 +10,8 @@ permalink: "components/blockquote.html"
 </style>
 
 <h1 class="mt-lg-0">Blockquote</h1>
-<p class="lead">A blockquote emphasizes quotes or excerpts related to the page content.</p>
-<p class="lead">Blockquote text is styled differently from the main text and is typically used for important quotations.
+<p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
+<p>Blockquote text is styled differently from the main text and is typically used for important quotations.
 </p>
 
 <h2 id="Basic-blockquote">Basic blockquote</h2>
