--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -6,7 +6,7 @@ permalink: "components/breadcrumb.html"
 ---
 
 <h1 class="mt-lg-0">Breadcrumb</h1>
-<p class="lead">The breadcrumb component helps visitors understand where they are within a website’s structure and move
+<p>The breadcrumb component helps visitors understand where they are within a website’s structure and move
  between
  levels. </p>
 
