--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -29,10 +29,10 @@ permalink: "components/countdown-timer.html"
 
 <h1 class="mt-lg-0">Countdown timer</h1>
 
-<p class="lead">The countdown timer component helps visitors visualize the counting toward or away from a fixed point in
+<p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in
  time. </p>
-<p class="lead">Time intervals displayed by the countdown timer can include:</p>
-<ul class="lead">
+<p>Time intervals displayed by the countdown timer can include:</p>
+<ul>
  <li>Weeks</li>
  <li>Days</li>
  <li>Hours</li>
