--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -29,9 +29,9 @@ permalink: "components/form-elements.html"
 
 
 <h1 class="mt-lg-0">Forms elements</h1>
-<p class="lead">A form allows visitors to submit information to a server.</p>
-<p class="lead">Common form elements include:</p>
-<ul class="lead">
+<p>A form allows visitors to submit information to a server.</p>
+<p>Common form elements include:</p>
+<ul>
  <li>Label</li>
  <li>Text field</li>
  <li>Text area</li>
