--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -219,7 +219,7 @@ permalink: "visual-design/icons.html"
 
 
   <h1 class="mt-lg-0" id="Icons">Icons</h1>
-  <p class="lead">Icons are visual representations of commands, devices, directories, or common actions.
+  <p>Icons are visual representations of commands, devices, directories, or common actions.
   </p>
   <p>The State Web Template uses CSS classes to customize icon color for compatibility with all popular browsers.</p>
 
