--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -8,7 +8,7 @@ permalink: "components/lists.html"
 
 
 <h1 class="mt-lg-0">Lists</h1>
-<p class="lead">A list is a vertical grouping of related content. They are typically bulleted or numbered.</p>
+<p>A list is a vertical grouping of related content. They are typically bulleted or numbered.</p>
 
 <h2 id="Unordered-list">Unordered list</h2>
 <p>Use an unordered list (bulleted) if the order of grouped items does not matter.</p>
