--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -9,7 +9,7 @@ permalink: "components/parallax.html"
 
 
 <h1 class="mt-lg-0">Parallax</h1>
-<p class="lead">The parallax is a visual design component. When scrolling, it allows background and foreground elements
+<p>The parallax is a visual design component. When scrolling, it allows background and foreground elements
  to move at different speeds, creating a 3D effect. </p>
 <h2 id="Sample">Sample</h2>
 
