--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -34,7 +34,7 @@ permalink: "structure/footer.html"
  <div class="col-md-9 m-b-lg">
 
   <h1 class="mt-lg-0">Footer</h1>
-  <p class="lead">The footer is a structural component that puts the state's standard footer at the very bottom of your
+  <p>The footer is a structural component that puts the state's standard footer at the very bottom of your
    site. Having a common footer tells people that the website is an official product of the State of California, which
    increases user trust.</p>
   <p>The footer contains a set of links that go on all the pages of the website.</p>
