--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -35,7 +35,7 @@ permalink: "structure/mobile-controls.html"
 
 
   <h1 class="mt-lg-0">Mobile controls</h1>
-  <p class="lead">Mobile controls are mobile-friendly website search and navigation. Search and navigation toggle
+  <p>Mobile controls are mobile-friendly website search and navigation. Search and navigation toggle
    buttons expand and collapse when interacted with in mobile view.</p>
   <p>It includes:</p>
 
