--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -39,7 +39,7 @@ permalink: "structure/search.html"
 
   <h1 class="mt-lg-0 m-b-0">Search</h1>
   <p class="subtitle">Other names: searchbox, search field</p>
-  <p class="lead">A search input provides visitors an input field to search for specific content within a site or
+  <p>A search input provides visitors an input field to search for specific content within a site or
    database. </p>
   <p>With search, visitors can filter content using different keywords or phrases.
   </p>
