--- a/pages/sample/structure-settings-bar.html
+++ b/pages/sample/structure-settings-bar.html
@@ -35,7 +35,7 @@ permalink: "structure/settings-bar.html"
 
 
   <h1 class="mt-lg-0">Settings</h1>
-  <p class="lead">Website settings become visible after selecting the gear icon in the upper right hand corner.</p>
+  <p>Website settings become visible after selecting the gear icon in the upper right hand corner.</p>
   <p>The settings allows visitors to:</p>
 
   <ul>
