--- a/pages/sample/structure-site-header.html
+++ b/pages/sample/structure-site-header.html
@@ -35,7 +35,7 @@ permalink: "structure/site-header.html"
 
 
   <h1 class="mt-lg-0">Site header</h1>
-  <p class="lead">The site header puts your site's name at the top of your website, under the utility header. This
+  <p>The site header puts your site's name at the top of your website, under the utility header. This
    allows people to
    readily identify the site they're visiting. If they interact with the site's name, it returns them to the site's
    homepage.
