--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -42,7 +42,7 @@ permalink: "structure/site-navigation.html"
 
 
   <h1 class="mt-lg-0 m-b-lg">Site navigation</h1>
-  <p class="lead">Site navigation appears at the top of every page on your site. It gives links to pages in the site,
+  <p>Site navigation appears at the top of every page on your site. It gives links to pages in the site,
    sometimes ordered by topic, task, or user type. This makes it easier for people to navigate the website.</p>
   <p>There are two options for each site navigation item:</p>
   <ul>
