--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -35,7 +35,7 @@ permalink: "structure/utility-header.html"
 
 
   <h1 class="mt-lg-0">Utility header</h1>
-  <p class="lead">The utility header puts a standard header at the very top of your site. Having a common header tells
+  <p>The utility header puts a standard header at the very top of your site. Having a common header tells
    people that the website is an official product of the State of California, which increases user trust.</p>
 
   <p>It includes:</p>
