--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -6,7 +6,7 @@ permalink: "components/table.html"
 ---
 
 <h1 class="mt-lg-0">Table</h1>
-<p class="lead">A table displays data in rows and columns. </p>
+<p>A table displays data in rows and columns. </p>
 
 <h2 id="Basic">Basic</h2>
 <!--TABS-->
