--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -7,194 +7,195 @@ permalink: "visual-design/typography.html"
 
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
-    <!-- Side navigation -->
-    <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
-      <ul class="list-navigation">
-        <li><a href="#Typography" class="active">Typography </a>
-          <ul>
-            <li><a href="#Typeface">Typeface</a></li>
-            <li><a href="#Fontcode">Font code</a></li>
-            <li><a href="#Headinghierarchy">Heading hierarchy</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class="col-md-9 p-b-lg">
+ <div class="col-md-3" role="complementary">
+  <!-- Side navigation -->
+  <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
+   <ul class="list-navigation">
+    <li><a href="#Typography" class="active">Typography </a>
+     <ul>
+      <li><a href="#Typeface">Typeface</a></li>
+      <li><a href="#Fontcode">Font code</a></li>
+      <li><a href="#Headinghierarchy">Heading hierarchy</a></li>
+     </ul>
+    </li>
+   </ul>
+  </nav>
+ </div>
+ <div class="col-md-9 p-b-lg">
 
-    <h1 id="Typography" class="mt-lg-0">Typography</h1>
-    <p class="lead">
-      Use typography to present your department’s brand and content as clearly as possible.
+  <h1 id="Typography" class="mt-lg-0">Typography</h1>
+  <p class="lead">
+   Use typography to present your department's brand and content as clearly as possible.
+  </p>
+
+  <div class="row">
+   <div class="col-md-7 p-r-lg">
+    <h2 id="Typeface">Typeface</h2>
+    <p>
+     The State Web Template uses <a href="https://public-sans.digital.gov/">Public Sans</a> designed by the <a
+      href="https://designsystem.digital.gov/">United States Web Design System</a>. This strong, neutral typeface
+     is used for text and headings.
     </p>
-
-    <div class="row">
-      <div class="col-md-7 p-r-lg">
-        <h2 id="Typeface">Typeface</h2>
-        <p>
-          The State Web Template uses <a href="https://public-sans.digital.gov/">Public Sans</a> designed by the <a
-            href="https://designsystem.digital.gov/">United States Web Design System</a>. This strong, neutral typeface
-          is used for text and headings.
-        </p>
-        <p><a class="btn btn-default brd-primary color-primary" style="color: #046B99" href="https://fonts.google.com/specimen/Public+Sans#standard-styles">Public Sans
-            in Google Fonts</a></p>
-      </div>
-      <div class="col-md-5">
-        <span class="text-huge">Aa</span>
-        <div>
-          <p class="text-tiny">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
-          <p class="text-tiny">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
-          <p class="text-tiny">0 1 2 3 4 5 6 7 8 9</p>
-        </div>
-      </div>
+    <p><a class="btn btn-default brd-primary color-primary" style="color: #046B99"
+      href="https://fonts.google.com/specimen/Public+Sans#standard-styles">Public Sans
+      in Google Fonts</a></p>
+   </div>
+   <div class="col-md-5">
+    <span class="text-huge">Aa</span>
+    <div>
+     <p class="text-tiny">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</p>
+     <p class="text-tiny">a b c d e f g h i j k l m n o p q r s t u v w x y z</p>
+     <p class="text-tiny">0 1 2 3 4 5 6 7 8 9</p>
     </div>
-
-    <h2 id="Fontcode">Font code</h2>
-
-    <table id="fontcodetable" class="">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Usage and Demo</th>
-          <th>Code</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Font family</td>
-          <td>Use sitewide for all text.</td>
-          <td>font-family:'Public Sans', sans-serif;</td>
-        </tr>
-        <tr>
-          <td>Lead paragraph</td>
-          <td class="lead">Use for the intro paragraph on a webpage.</td>
-          <td>Class: .lead<br>
-            Code: font-size: calc(1.25rem + 0.1vw);</td>
-        </tr>
-        <tr>
-          <td>Regular paragraph</td>
-          <td>Use for all body text.</td>
-          <td>font-size: calc(1.125rem + 0.1vw);</td>
-        </tr>
-        <tr>
-          <td>Small-text paragraph</td>
-          <td class="small">Use for tooltips and footnotes.</td>
-          <td>Class: .small<br>
-            Code: font-size: calc(1rem + 0.1vw);</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h2 id="Headinghierarchy">Heading hierarchy</h2>
-    <p>The line height is a ratio of 1.75 to the base font size. For each ascending level, the ratio is decreased by ⅛.
-      As a result, larger headings have smaller line-height ratios, which improves readability.</p>
-
-    <div class="row mt-4">
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h1">Heading 1</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(2.9375rem + 0.1vw)<br />
-          line-height: 1.25
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h2">Heading 2</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(2.3175rem + 0.1vw);<br />
-          line-height: 1.375
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h3">Heading 3</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(1.8125rem + 0.1vw)<br />
-          line-height: 1.5
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h4">Heading 4</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(1.4375rem + 0.1vw)<br />
-          line-height: 1.625
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h5">Heading 5</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(1.125rem + 0.1vw);<br />
-          line-height: 1.75
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="example-heading">
-          <div class="h6">Heading 6</div>
-        </div>
-        <div class="font-size-70x">
-          font-family: 'Public Sans'<br />
-          font-weight: 700<br />
-          font-size: calc(0.875rem + 0.1vw);<br />
-          line-height: 1.75
-        </div>
-      </div>
-    </div>
-
+   </div>
   </div>
+
+  <h2 id="Fontcode">Font code</h2>
+
+  <table id="fontcodetable" class="">
+   <thead>
+    <tr>
+     <th>Name</th>
+     <th>Usage and Demo</th>
+     <th>Code</th>
+    </tr>
+   </thead>
+   <tbody>
+    <tr>
+     <td>Font family</td>
+     <td>Use sitewide for all text.</td>
+     <td>font-family:'Public Sans', sans-serif;</td>
+    </tr>
+    <tr>
+     <td>Lead paragraph</td>
+     <td class="lead">Use for the intro paragraph on a webpage.</td>
+     <td>Class: .lead<br>
+      Code: font-size: calc(1.4375rem + 0.1vw);</td>
+    </tr>
+    <tr>
+     <td>Regular paragraph</td>
+     <td>Use for all body text.</td>
+     <td>font-size: calc(1.125rem + 0.1vw);</td>
+    </tr>
+    <tr>
+     <td>Small-text paragraph</td>
+     <td class="small">Use for tooltips and footnotes.</td>
+     <td>Class: .small<br>
+      Code: font-size: calc(1rem + 0.1vw);</td>
+    </tr>
+   </tbody>
+  </table>
+
+  <h2 id="Headinghierarchy">Heading hierarchy</h2>
+  <p>The line height is a ratio of 1.75 to the base font size. For each ascending level, the ratio is decreased by ⅛.
+   As a result, larger headings have smaller line-height ratios, which improves readability.</p>
+
+  <div class="row mt-4">
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h1">Heading 1</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(2.9375rem + 0.1vw)<br />
+     line-height: 1.25
+    </div>
+   </div>
+
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h2">Heading 2</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(2.3175rem + 0.1vw);<br />
+     line-height: 1.375
+    </div>
+   </div>
+
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h3">Heading 3</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(1.8125rem + 0.1vw)<br />
+     line-height: 1.5
+    </div>
+   </div>
+  </div>
+
+  <div class="row">
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h4">Heading 4</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(1.4375rem + 0.1vw)<br />
+     line-height: 1.625
+    </div>
+   </div>
+
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h5">Heading 5</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(1.125rem + 0.1vw);<br />
+     line-height: 1.75
+    </div>
+   </div>
+
+   <div class="col-md-4">
+    <div class="example-heading">
+     <div class="h6">Heading 6</div>
+    </div>
+    <div class="font-size-70x">
+     font-family: 'Public Sans'<br />
+     font-weight: 700<br />
+     font-size: calc(0.875rem + 0.1vw);<br />
+     line-height: 1.75
+    </div>
+   </div>
+  </div>
+
+ </div>
 </div>
 
 <style>
-  .font-size-70x {
-    border-left: 2px solid #ccc;
-    padding-left: 1em;
-  }
+ .font-size-70x {
+  border-left: 2px solid #ccc;
+  padding-left: 1em;
+ }
 
-  .example-heading {
-    min-height: 4rem;
-    vertical-align: text-bottom;
-    position: relative;
-    margin: 1rem 0 1rem 0;
-  }
+ .example-heading {
+  min-height: 4rem;
+  vertical-align: text-bottom;
+  position: relative;
+  margin: 1rem 0 1rem 0;
+ }
 
-  .example-heading div {
-    margin: 0rem 0 0rem 0;
-    position: absolute;
-    bottom: 0;
-  }
+ .example-heading div {
+  margin: 0rem 0 0rem 0;
+  position: absolute;
+  bottom: 0;
+ }
 
-  #fontcodetable {
-    border-collapse: collapse;
-  }
+ #fontcodetable {
+  border-collapse: collapse;
+ }
 
-  #fontcodetable td,
-  #fontcodetable th {
-    border: 1px solid #aaa;
-    padding: .7rem .5rem;
-    vertical-align: top;
-  }
+ #fontcodetable td,
+ #fontcodetable th {
+  border: 1px solid #aaa;
+  padding: .7rem .5rem;
+  vertical-align: top;
+ }
 </style>
