--- a/pages/structure.html
+++ b/pages/structure.html
@@ -33,7 +33,8 @@ permalink: "structure.html"
 
 
   <h1 class="mt-lg-0">Structure</h1>
-  <p class="lead">Our structural components form the basic structure of a website utilizing the State Web Template. </p>
+  <p class="lead">Our structural components form the basic structure of a website using the State Web Template. This
+   structure contains elements that connect web pages and can lead to a smooth user experience.</p>
   <h2>Webpage structure</h2>
   <p>
    The State Web Template uses includes as our main building components.</p>
