--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -27,7 +27,7 @@ permalink: "template-updates.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 class="mt-lg-0">Template updates</h1>
-  <p class="lead">We are continually improving the California State Web Template. View release features by date for
+  <p>We are continually improving the California State Web Template. View release features by date for
    items that have been added or updated. </p>
   <p>If you are new here, you may find our <a href="/get-started.html">get started</a> page helpful.</p>
 
