--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -30,10 +30,10 @@ permalink: "get-started.html"
  <div class="col-md-9 p-b-lg">
   <h1 class="mt-lg-0">Get started</h1>
 
-  <p class="lead">The State Web Template makes it easier to build digital services to meet the needs of Californians.
+  <p class="lead">The State Web Template makes it easier to build digital services to meet the needs of Californians. It
+   offers components and templates to help product teams work more efficiently. Each component and template comes with
+   code to make it easy for you to use them in your project.
   </p>
-  <p>It offers components and templates to help product teams work more efficiently. Each component and template comes
-   with code to make it easy for you to use them in your project.</p>
 
   <div class="row">
    <div class="col-md-4 m-t-md">
