--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -6,12 +6,12 @@ permalink: "patterns.html"
 ---
 
 <h1 class="mt-lg-0">Patterns</h1>
-<p class="lead">Patterns are reusable combinations of components from our template.</p>
-<p class="lead">
- These best practice solutions help visitors achieve their goals and ensure consistency across experiences.</p>
-
+<p class="lead">Patterns are reusable combinations of components from our template. They help visitors achieve their
+ goals and ensure consistency across experiences.
+</p>
 <p class="lead">All of the patterns in this section are supported by written guidance and contain code snippets and
- examples.</p>
+ examples.
+</p>
 
 <h2>All patterns</h2>
 <p>Use these patterns to present a combination of information and images.</p>
