--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -28,7 +28,7 @@ permalink: "whats-new.html"
  <div class="col-md-9 p-b-lg">
 
   <h1 class="mt-lg-0">What's new in V6</h1>
-  <p class="lead">Version 6 of the State Web Template has a new look and feel. With improvements that align with the
+  <p>Version 6 of the State Web Template has a new look and feel. With improvements that align with the
    <a href="https://designsystem.webstandards.ca.gov/">California Design System</a>, V6 sets a modern digital standard.
   </p>
   <h2 id="Patterns">Patterns</h2>
