--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -9,7 +9,7 @@ permalink: "contact-us.html"
   <li>
     <p>
       For general help,
-      <a href="https://webstandards.ca.gov/contact-us/">submit this form</a>
+      <a href="contact-us-form.html">submit this form</a>
       .
     </p>
   </li>
