--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -8,15 +8,14 @@ permalink: "contact-us-form.html"
 
 <form autocomplete="on" method="POST" id="ContactUsForm">
   <fieldset>
-    <legend>Contact Us Form</legend>
+    <legend>What would you like to say?</legend>
     <label class="form-control-label" for="InputName"
-      ><span class="required-label">*</span> Full name</label
+      ><span class="required-label">*</span> Full Name</label
     >
     <input
       type="text"
       class="form-control"
       id="InputName"
-      placeholder="Full Name"
       name="Name"
       autocomplete="name"
       required
@@ -28,7 +27,6 @@ permalink: "contact-us-form.html"
       type="email"
       class="form-control"
       id="InputEmail"
-      placeholder="Email Address"
       name="Email"
       autocomplete="email"
     />
@@ -38,7 +36,6 @@ permalink: "contact-us-form.html"
       type="text"
       class="form-control"
       id="InputRole"
-      placeholder="Your Role"
       name="Role"
       autocomplete="organization-title"
     />
@@ -50,13 +47,12 @@ permalink: "contact-us-form.html"
       type="text"
       class="form-control"
       id="InputDepartment"
-      placeholder="Your Department"
       name="Department"
       autocomplete="organization"
     />
     <br />
     <label class="form-control-label" for="InputComments"
-      ><span class="required-label">*</span> Your comment</label
+      ><span class="required-label">*</span> Your Comment</label
     >
     <textarea
       id="InputComments"
@@ -110,7 +106,7 @@ permalink: "contact-us-form.html"
   data-bs-toggle="modal"
   data-bs-target="#modalResponse"
 >
-  Open modal
+  blank
 </button>
 <a href="contact-us-thankyou.html" id="urlThankyou" class="hidden">thanks</a>
 
