Adding suggested roles

--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -38,7 +38,18 @@ permalink: "contact-us-form.html"
       id="InputRole"
       name="Role"
       autocomplete="organization-title"
+      list="roleSuggestions"
     />
+    <datalist id="roleSuggestions">
+      <option>Analytics</option>
+      <option>Content</option>
+      <option>Design</option>
+      <option>Development</option>
+      <option>Product</option>
+      <option>Program</option>
+      <option>Research</option>
+  </datalist>
+
     <br />
     <label class="form-control-label" for="InputDepartment"
       >Your Department</label
