updated alert page

--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -51,10 +51,10 @@ permalink: "components/alert.html"
     <div class="card-body p-b-lg">
 
 
-     <h3>Info</h3>
+     <h3 class="m-t-0">Info</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
-       <span class="alert-icon ca-gov-icon-info text-primary" aria-hidden="true"></span>
+       <img src="/images/alert-info.svg" alt="alert info icon">
        <span class="alert-text"><span class="text-bold">New!</span> A new version of the State Web Template has
         launched. <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
         <a href="#">Upgrade now</a></span>
@@ -83,7 +83,7 @@ permalink: "components/alert.html"
      <h3>Danger</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
-       <span class="alert-icon ca-gov-icon-warning-diamond text-danger" aria-hidden="true"></span>
+       <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
        <span class="alert-text"><span class="text-bold">Alert:</span> Our systems are currently down. <span
          class="ca-gov-icon-pipe" aria-hidden="true"></span>
         <a href="#">Learn more <span class="sr-only">about the incident</span></a></span>
@@ -96,7 +96,7 @@ permalink: "components/alert.html"
      <h3>Resolution</h3>
      <div class="alert alert-dismissible alert-banner" role="alert">
       <div class="container">
-       <span class="alert-icon ca-gov-icon-check-fill text-success" aria-hidden="true"></span>
+       <img src="/images/alert-success.svg" alt="alert success icon">
        <span class="alert-text"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
          class="ca-gov-icon-pipe" aria-hidden="true"></span>
         <a href="#">Learn more <span class="sr-only">about the resolution</span></a></span>
@@ -125,10 +125,10 @@ permalink: "components/alert.html"
    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
     <div class="card-body">
 
-     <h3>Info</h3>
+     <h3 class="m-t-0">Info</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
-   <span class="alert-icon ca-gov-icon-info text-primary" aria-hidden="true"></span>
+   <img src="/images/alert-info.svg" alt="alert info icon">
    <span class="alert-text"><span class="text-bold">New!</span> A new version of the State Web Template has
     launched. <span class="ca-gov-icon-pipe" aria-hidden="true"></span>
     <a href="#">Upgrade now</a></span>
@@ -159,7 +159,7 @@ permalink: "components/alert.html"
      <h3>Danger</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
-   <span class="alert-icon ca-gov-icon-warning-diamond text-danger" aria-hidden="true"></span>
+   <img src="/images/alert-warning-diamond.svg" alt="alert warning icon">
    <span class="alert-text"><span class="text-bold">Alert:</span> Our systems are currently down. <span
      class="ca-gov-icon-pipe" aria-hidden="true"></span>
     <a href="#">Learn more <span class="sr-only">about the incident</span></a></span>
@@ -174,7 +174,7 @@ permalink: "components/alert.html"
      <h3>Resolution</h3>
      <pre><code><div class="alert alert-dismissible alert-banner" role="alert">
   <div class="container">
-   <span class="alert-icon ca-gov-icon-check-fill text-success" aria-hidden="true"></span>
+   <img src="/images/alert-success.svg" alt="alert success icon">
    <span class="alert-text"><span class="text-bold">Fixed.</span> Our systems are back up again. <span
      class="ca-gov-icon-pipe" aria-hidden="true"></span>
     <a href="#">Learn more <span class="sr-only">about the resolution</span></a></span>
