--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -4,9 +4,10 @@ landing: Components
 layout: components.njk
 permalink: "components/horizontal-separator.html"
 ---
-<h1 class="mt-lg-0">Horizontal separator</h1>
-<p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
+<h1 class="mt-lg-0 mb-0">Horizontal separator</h1>
 <p class="subtitle">Other names: horizontal rule, divider</p>
+<p>The horizontal separator is a style component that uses a line to separate content into sections.</p>
+
 
 
 <h2 id="Sample">Sample</h2>
